--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^1.2.0",
     "@discordjs/rest": "^1.1.0",
     "caver-js": "^1.9.0",
     "discord-api-types": "^0.37.5",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.5.4"
   }
 }
