--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/builders": "^1.2.0",
     "@discordjs/rest": "^1.1.0",
     "caver-js": "^1.9.0",
+    "cors": "^2.8.5",
     "discord-api-types": "^0.37.5",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
